--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 <body>
   <h1 id="balance">£0.00</h1>
   <input type="number" id="balanceInput" placeholder="Enter your balance">
-  <h4 id="dailyBalance">Daily balance: £0.00</h4>
-  <h1>hello Sarah</h1>
+  <h4 id="dailyBalance">Daily allowance: £0.00</h4>
   <script src="app.js"></script>
 </body>
 </html>
