--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #f0f0f0;
+      background-color: #d0c3d7;
       font-family: Arial, sans-serif;
     }
 
@@ -30,6 +30,7 @@
     h4 {
       font-size: 1.5em;
       margin: 0.5em 0;
+      color: #484848;
     }
   </style>
 </head>
