--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #d0c3d7;
+      
       font-family: Arial, sans-serif;
     }
 
@@ -37,7 +37,9 @@
 <body>
   <h1 id="balance">£0.00</h1>
   <input type="number" id="balanceInput" placeholder="Enter your balance">
-  <h4 id="dailyBalance">Daily allowance: £0.00</h4>
+  <p id="days-left"></p>
+  <p id="dailyBalance"><b>Daily allowance: £0.00</p>
+  <p id="lastUpdated"></p>
   <script src="app.js"></script>
 </body>
 </html>
