--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minty - Spending Tracker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is test</h1>
+    
+
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
