Outlined the bascis

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div> 
+        <div class="balance-section">
+            <h2>Balance: £<span id="balance">0.00</span></h2>
+        </div>
+        <div class="input-section">
+            <input type="number" name="dailySpend" id="dailySpend" placeholder="Amount spent">
+            <br>
+            <input type="radio" name="catagory" id="catagory" value="Need">
+            <label for="catagory">Want</label>
+            <input type="radio" name="catagory" id="catagory" value="Need">
+            <label for="catagory">Need</label>
+            <p><br><br></p>
+            <button type="button">Add Spend</button>
+       
+        </div>
+
+
+
+
+    </div>
 
 
 
